--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,8 +31,7 @@ jobs:
     - run: npm test
 
     - name: Archive production artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: dist-without-markdown
-          path: |
-            build
+      uses: actions/upload-artifact@v3
+      with:
+        name: dist-without-markdown
+        path: build
