--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -9,6 +9,8 @@ on:
   pull_request:
     branches: [ "main" ]
 
+
+workflow_dispatch:
 jobs:
   build:
 
@@ -21,6 +23,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+- name: Setup Pages
+        uses: actions/configure-pages@v2
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
@@ -30,8 +34,20 @@ jobs:
     - run: npm run build --if-present
     #- run: npm test
 
-    - name: Archive production artifacts
+    - name: Upload artifacts
       uses: actions/upload-artifact@v3
       with:
-        name: dist-without-markdown
         path: build
+
+
+# Deployment job
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v1
