--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -47,6 +47,7 @@ jobs:
     - name: Upload artifacts
       uses: actions/upload-artifact@v3
       with:
+        name: "_site"
         path: "build/"
 
     # Deployment job
